fixing bug on iphone with webkit properties

--- a/src/components/ProductCard/productCard.css
+++ b/src/components/ProductCard/productCard.css
@@ -17,7 +17,7 @@
 
 .productCard:hover{
     transform: translate(-0.25rem, -0.25rem);
-    webkit-transform: translate(-0.25rem, -0.25rem);
+    -webkit-transform: translate(-0.25rem, -0.25rem);
     box-shadow: 0.25rem 0.25rem 0 black
 }
 
